--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -43,13 +43,13 @@
         <p>Deze laag communiceert met de logische laag door gegevens te verzenden en ontvangen vanuit applicaties die op de computer draaien. Deze gegevens worden via de logische laag naar de fysieke laag gestuurd voor uiteindelijke overdracht over het netwerk.</p>
 
       <h2>Verdieping operating system</h2>
-        <p> De taken van een operating system zijn:
-          Berekeningen maken: De processor voert wiskundige en logische berekeningen uit, zoals optellen en vergelijken. Dit helpt bij het uitvoeren van taken en het maken van beslissingen.
-          Gegevens beheren: Het slaat gegevens op en haalt ze op uit het geheugen (zoals RAM), wat nodig is voor programma's om te werken.
-          Instructies volgen: Het leest en begrijpt instructies van programma's en voert ze in de juiste volgorde uit.
-          Problemen oplossen: Het kan problemen detecteren en ermee omgaan, zoals fouten of speciale verzoeken van apparaten.
-          Snel werken: Moderne processors zijn erg snel en kunnen meerdere taken tegelijkertijd uitvoeren, wat computers snel maakt.
-          Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
+        <p>De taken van een operating system zijn:</p>
+        <p>Berekeningen maken: De processor voert wiskundige en logische berekeningen uit, zoals optellen en vergelijken. Dit helpt bij het uitvoeren van taken en het maken van beslissingen.</p>
+        <p>Gegevens beheren: Het slaat gegevens op en haalt ze op uit het geheugen (zoals RAM), wat nodig is voor programma's om te werken.</p>
+        <p>Instructies volgen: Het leest en begrijpt instructies van programma's en voert ze in de juiste volgorde uit.</p>
+        <p>Problemen oplossen: Het kan problemen detecteren en ermee omgaan, zoals fouten of speciale verzoeken van apparaten.</p>
+        <p>Snel werken: Moderne processors zijn erg snel en kunnen meerdere taken tegelijkertijd uitvoeren, wat computers snel maakt.</p>
+        <p>Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
         </article>   
 
         <img src="3lagenmodel.PNG" style="width:550px;height:550px">
