--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -31,16 +31,16 @@
           van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>
       <h2>Communicatie tussen de lagen</h2>
         <p>Fysieke laag:</p>
-        <p>De fysieke laag is de onderste laag in dit model en is verantwoordelijk voor de fysieke verbindingen en transmissie van ruwe binaire gegevens over het netwerkmedium (bijvoorbeeld elektrische signalen over een Ethernet-kabel of radiogolven in een draadloos netwerk).</p>
-        <p>De fysieke laag communiceert met de logische laag door de ruwe gegevens te leveren aan de logische laag voor verdere verwerking.</p>
+        <p>De fysieke laag is de onderste laag in dit model en is verantwoordelijk voor de fysieke verbindingen en transmissie van ruwe binaire gegevens over het netwerkmedium (bijvoorbeeld elektrische signalen over een Ethernet-kabel of radiogolven in een draadloos netwerk).
+        De fysieke laag communiceert met de logische laag door de ruwe gegevens te leveren aan de logische laag voor verdere verwerking.</p>
 
         <p>Logische laag:</p>
-        <p>De logische laag bevindt zich boven de fysieke laag en heeft tot taak om de fysieke communicatie betrouwbaar te maken door foutdetectie en foutcorrectie toe te passen.</p>
-        <p>Deze laag communiceert met de fysieke laag door de gegevens te ontvangen van de fysieke laag, deze te verwerken en vervolgens door te sturen naar de toepassingslaag of de bovenliggende lagen.</p>
+        <p>De logische laag bevindt zich boven de fysieke laag en heeft tot taak om de fysieke communicatie betrouwbaar te maken door foutdetectie en foutcorrectie toe te passen.
+        Deze laag communiceert met de fysieke laag door de gegevens te ontvangen van de fysieke laag, deze te verwerken en vervolgens door te sturen naar de toepassingslaag of de bovenliggende lagen.</p>
 
         <p>Toepassingslaag:</p>
-        <p>De toepassingslaag is de bovenste laag in dit model en is verantwoordelijk voor de interactie met applicaties en gebruikers.</p>
-        <p>Deze laag communiceert met de logische laag door gegevens te verzenden en ontvangen vanuit applicaties die op de computer draaien. Deze gegevens worden via de logische laag naar de fysieke laag gestuurd voor uiteindelijke overdracht over het netwerk.</p>
+        <p>De toepassingslaag is de bovenste laag in dit model en is verantwoordelijk voor de interactie met applicaties en gebruikers.
+        Deze laag communiceert met de logische laag door gegevens te verzenden en ontvangen vanuit applicaties die op de computer draaien. Deze gegevens worden via de logische laag naar de fysieke laag gestuurd voor uiteindelijke overdracht over het netwerk.</p>
 
       <h2>Verdieping operating system</h2>
         <p>De taken van een operating system zijn:</p>
