--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <h2>Toepsaaingslaag</h2>
+    <h2>Toepassingslaag</h2>
     <p>Toepassingsprogramma's zijn softwaretoepassingen die taken uitvoeren voor gebruikers, zoals webbrowsers en e-mailclients. Databases zijn georganiseerde 
         verzamelingen van gestructureerde gegevens die worden gebruikt om informatie op te slaan en te beheren. Toepassingsprogramma's kunnen gegevens ophalen, bewerken en opslaan in 
         databases om specifieke taken uit te voeren.</p>
