--- a/Logischelaag.html
+++ b/Logischelaag.html
@@ -35,7 +35,7 @@
       Kortom, de logische laag in het 3 lagenmodel speelt een cruciale rol in het beheren van gegevensverkeer en routering in computernetwerken. Het zorgt ervoor dat gegevens effectief kunnen worden verzonden tussen apparaten, ongeacht hun fysieke locatie in het netwerk.      
     </p>
 
-    <img src="3-lagenmodelPlaatje.PNG" style="width:300px;height:300px">
+    <img src="3-lagemodelPlaatje.PNG" style="width:300px;height:300px">
 
 
   </body>
