--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -20,7 +20,7 @@
     <p>Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht. </p>        
     <p>Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen.</p>          
 
-      <img src="3-lagenmodelPlaatje.PNG" style="width:300px;height:300px">
+      <img src="3-lagemodelPlaatje.PNG" style="width:300px;height:300px">
 
   </body>
   </html> 
