--- a/Logischelaag.html
+++ b/Logischelaag.html
@@ -36,7 +36,7 @@
     </p>
 
     <img src="3-lagemodelPlaatje.PNG" style="width:400px;height:300px">
-
+    <p>3-lagenmodel van een telefoon</p>
 
   </body>
   </html> 
