--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -21,6 +21,7 @@
     <p>Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen.</p>          
 
       <img src="3-lagemodelPlaatje.PNG" style="width:400px;height:300px">
+      <p>3-lagenmodel van een telefoon</p>
 
   </body>
   </html> 
