--- a/Fysiekelaag.html
+++ b/Fysiekelaag.html
@@ -20,6 +20,7 @@
         <p>Verbindingen: kabels/interfaces: De fysieke laag omvat ook de kabels en interfaces waarmee verschillende hardwarecomponenten met elkaar en met externe apparaten worden verbonden.</p>
 
           <img src="3-lagemodelPlaatje.PNG" style="width:400px;height:300px">
+          <p>3-lagenmodel van een telefoon</p>
 
   </body>
   </html> 
