--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -43,14 +43,17 @@
         Deze laag communiceert met de logische laag door gegevens te verzenden en ontvangen vanuit applicaties die op de computer draaien. Deze gegevens worden via de logische laag naar de fysieke laag gestuurd voor uiteindelijke overdracht over het netwerk.</p>
 
       <h2>Verdieping operating system</h2>
-        <p>De taken van een operating system zijn:</p>
-        <p>Berekeningen maken: De processor voert wiskundige en logische berekeningen uit, zoals optellen en vergelijken. Dit helpt bij het uitvoeren van taken en het maken van beslissingen.</p>
-        <p>Gegevens beheren: Het slaat gegevens op en haalt ze op uit het geheugen (zoals RAM), wat nodig is voor programma's om te werken.</p>
-        <p>Instructies volgen: Het leest en begrijpt instructies van programma's en voert ze in de juiste volgorde uit.</p>
-        <p>Problemen oplossen: Het kan problemen detecteren en ermee omgaan, zoals fouten of speciale verzoeken van apparaten.</p>
-        <p>Snel werken: Moderne processors zijn erg snel en kunnen meerdere taken tegelijkertijd uitvoeren, wat computers snel maakt.</p>
-        <p>Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
-        </article>   
+      <p>Op de laag van de fysieke laag (Laag 1) beheert het besturingssysteem de fysieke bronnen van de computer, zoals de processor, 
+      het geheugen en de opslagapparaten. Het zorgt ervoor dat deze bronnen efficiënt worden gebruikt en dat verschillende programma's 
+      geen conflicten veroorzaken bij het delen van deze bronnen.</p>
+      <p>Op de logische laag (Laag 2) heeft het besturingssysteem de taak om de communicatie tussen verschillende programma's te coördineren.
+      Het beheert zaken als het plannen van processen, het beheren van bestanden en het regelen van netwerkverbindingen. 
+      Dit helpt programma's om met elkaar te praten en gegevens uit te wisselen.</p>
+      <p>Op de toepassingslaag (Laag 3) bevindt het besturingssysteem zich niet rechtstreeks, maar het biedt een platform waarop programma's kunnen draaien.
+      Het zorgt ervoor dat programma's correct kunnen worden uitgevoerd, toegang hebben tot systeembronnen zoals de muis en het toetsenbord, en dat gegevens veilig worden bewaard.</p>      
+      <p>Kort gezegd is het besturingssysteem een soort dirigent die ervoor zorgt dat alles soepel verloopt in de wereld van computers en software. 
+      Het helpt programma's om goed te werken en ervoor te zorgen dat de computer efficiënt wordt gebruikt.</p>       
+      </article>   
 
         <img src="3lagenmodel.PNG" style="width:550px;height:550px">
 
