--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -43,13 +43,13 @@
         Deze laag communiceert met de logische laag door gegevens te verzenden en ontvangen vanuit applicaties die op de computer draaien. Deze gegevens worden via de logische laag naar de fysieke laag gestuurd voor uiteindelijke overdracht over het netwerk.</p>
 
       <h2>Verdieping operating system</h2>
-      <p>Op de laag van de fysieke laag (Laag 1) beheert het besturingssysteem de fysieke bronnen van de computer, zoals de processor, 
+      <p>Op de laag van de fysieke laag beheert het besturingssysteem de fysieke bronnen van de computer, zoals de processor, 
       het geheugen en de opslagapparaten. Het zorgt ervoor dat deze bronnen efficiënt worden gebruikt en dat verschillende programma's 
       geen conflicten veroorzaken bij het delen van deze bronnen.</p>
-      <p>Op de logische laag (Laag 2) heeft het besturingssysteem de taak om de communicatie tussen verschillende programma's te coördineren.
+      <p>Op de logische laag heeft het besturingssysteem de taak om de communicatie tussen verschillende programma's te coördineren.
       Het beheert zaken als het plannen van processen, het beheren van bestanden en het regelen van netwerkverbindingen. 
       Dit helpt programma's om met elkaar te praten en gegevens uit te wisselen.</p>
-      <p>Op de toepassingslaag (Laag 3) bevindt het besturingssysteem zich niet rechtstreeks, maar het biedt een platform waarop programma's kunnen draaien.
+      <p>Op de toepassingslaag bevindt het besturingssysteem zich niet rechtstreeks, maar het biedt een platform waarop programma's kunnen draaien.
       Het zorgt ervoor dat programma's correct kunnen worden uitgevoerd, toegang hebben tot systeembronnen zoals de muis en het toetsenbord, en dat gegevens veilig worden bewaard.</p>      
       <p>Kort gezegd is het besturingssysteem een soort dirigent die ervoor zorgt dat alles soepel verloopt in de wereld van computers en software. 
       Het helpt programma's om goed te werken en ervoor te zorgen dat de computer efficiënt wordt gebruikt.</p>       
