--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -17,6 +17,7 @@
            <a href="Toepassingslaag.html">Toepassingslaag</a> 
            <a href="Logischelaag.html">Logische laag</a>
            <a href="Fysiekelaag.html">Fysieke laag</a>
+             <a href="Toepassingslaag.html">Toepassingslaag</a> 
           </div>
       </li>
     </ul>
