--- a/Logischelaag.html
+++ b/Logischelaag.html
@@ -6,6 +6,20 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="Bitmap.html">Bitmap</a></li>
+      <li class="dropdown">
+        <a href="Logischelaag.html" class="dropbtn">Logische laag</a>
+          <div class="dropdown-content">
+           <a href="3-lagenmodel.html">3-lagenmodel</a>
+           <a href="Fysiekelaag.html">Fysieke laag</a>
+           <a href="Toepassingslaag.html">Toepassingslaag</a> 
+          </div>
+        </li>
+    </ul>
 
     <h2>Logische laag</h2>
     <p>De logische laag bevindt zich boven de fysieke laag en omvat het besturingssysteem, dat essentieel is voor de coördinatie en beheer van hardwarebronnen en softwareprocessen.</p> 
