--- a/Fysiekelaag.html
+++ b/Fysiekelaag.html
@@ -6,6 +6,20 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="Bitmap.html">Bitmap</a></li>
+      <li class="dropdown">
+        <a href="Fysiekelaag.html" class="dropbtn">Fysieke laag</a>
+          <div class="dropdown-content">
+           <a href="3-lagenmodel.html">3-lagenmodel</a>
+           <a href="Logischelaag.html">Logische laag</a>
+           <a href="Toepassingslaag.html">Toepassingslaag</a> 
+          </div>
+        </li>
+    </ul>
 
 <h2>Fysieke laag</h2> <!--tussenkopje-->
         <p>De fysieke laag vormt de basis van het 3-lagenmodel en omvat alle hardwarecomponenten van een computersysteem. Enkele van de belangrijkste begrippen in deze laag zijn:</p>
