--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -6,6 +6,20 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="Bitmap.html">Bitmap</a></li>
+      <li class="dropdown">
+        <a href="Toepassingslaag.html" class="dropbtn">Toepassingslaag</a>
+          <div class="dropdown-content">
+           <a href="3-lagenmodel.html">3-lagenmodel</a>
+           <a href="Fysiekelaag.html">Fysieke laag</a>
+           <a href="Logischelaag.html">Logische laag</a> 
+          </div>
+        </li>
+    </ul>
 
     <h2>Toepassingslaag</h2>
     <p>Toepassingsprogramma's zijn softwaretoepassingen die taken uitvoeren voor gebruikers, zoals webbrowsers en e-mailclients. Databases zijn georganiseerde 
