--- a/Fysiekelaag.html
+++ b/Fysiekelaag.html
@@ -22,16 +22,16 @@
     </ul>
 
 <h2>Fysieke laag</h2> <!--tussenkopje-->
-        <p>De fysieke laag vormt de basis van het 3-lagenmodel en omvat alle hardwarecomponenten van een computersysteem. Enkele van de belangrijkste begrippen in deze laag zijn:</p>
-        <p>Processor (CPU): De centrale verwerkingseenheid (CPU) is het brein van de computer. Het bestaat uit twee essentiële onderdelen, de Arithmetic Logic Unit (ALU) voor wiskundige bewerkingen en de Control Unit voor het beheer van instructies.</p>
-        <p>Werkgeheugen (RAM/ROM): RAM (Random Access Memory) is het tijdelijke geheugen van een computer waar gegevens en programma's worden opgeslagen tijdens actief gebruik. ROM (Read-Only Memory) bevat permanente instructies die nodig zijn om het systeem op te starten.</p>
-        <p>Bus: Een bus is een communicatiekanaal waarmee gegevens tussen verschillende hardwarecomponenten kunnen worden overgedragen.</p>
-        <p>Von Neumann-architectuur: Dit is een architectuurconcept waarbij zowel gegevens als instructies in hetzelfde geheugen worden opgeslagen en op dezelfde manier worden verwerkt.</p>
-        <p>Moederbord: Het moederbord is het hoofdcircuit van een computer waarop alle hardwarecomponenten zijn aangesloten en met elkaar communiceren.</p>
-        <p>System-on-a-chip: Een System-on-a-chip (SoC) is een geïntegreerde chip waarop meerdere componenten, waaronder de CPU, GPU, en geheugen, zijn gecombineerd om ruimte te besparen en de efficiëntie te verhogen.</p>
-        <p>Permanent geheugen/opslagmedia: Dit omvat de opslagapparaten, zoals harde schijven en SSD's, waar gegevens permanent kunnen worden opgeslagen.</p>
-        <p>Randapparatuur: Randapparatuur zijn externe apparaten die aan de computer worden gekoppeld, zoals toetsenborden, muizen, printers en beeldschermen.</p>
-        <p>Verbindingen: kabels/interfaces: De fysieke laag omvat ook de kabels en interfaces waarmee verschillende hardwarecomponenten met elkaar en met externe apparaten worden verbonden.</p>
+        <p>In het 3-lagenmodel van een besturingssysteem (OS) vertegenwoordigt de fysieke laag de hardwarecomponenten van een computersysteem. De fysieke laag is verantwoordelijk voor de uitvoering van instructies, gegevensopslag en communicatie tussen hardwarecomponenten, wat de basis vormt voor de werking van het besturingssysteem en de daarop draaiende softwaretoepassingen.</p>
+        <p>Taken van de processor: De processor voert verschillende taken uit, waaronder het uitvoeren van instructies van programma's, het uitvoeren van rekenkundige en logische bewerkingen, het beheren van gegevens en het coördineren van hardwarecomponenten.</p>
+        <p>Werkgeheugen (RAM/ROM): RAM (Random Access Memory) wordt gebruikt voor tijdelijke opslag van gegevens en programma's die momenteel worden uitgevoerd. ROM (Read-Only Memory) bevat permanente instructies voor de computer en is niet-veranderlijk.</p>
+        <p>Bus: Bussen zijn de gegevens- en adreslijnen die worden gebruikt om gegevens en instructies tussen verschillende hardwarecomponenten te verzenden. Ze vormen een communicatienetwerk binnen de computer.</p>
+        <p>Von Neumann-architectuur: De Von Neumann-architectuur is een computerarchitectuurmodel waarin zowel gegevens als programma's in hetzelfde geheugen worden opgeslagen. Dit model maakt het mogelijk om programma's te manipuleren als gegevens.</p>
+        <p>Moederbord: Het moederbord is het belangrijkste circuitbord van een computer waarop de CPU, RAM en andere hardwarecomponenten zijn gemonteerd. Het fungeert als een centraal coördinatiepunt voor hardwarecommunicatie.</p>
+        <p>System-on-a-chip: Een system-on-a-chip (SoC) is een geïntegreerde schakeling die meerdere hardwarecomponenten combineert op één enkele chip, waaronder CPU, GPU, geheugencontrollers en meer.</p>
+        <p>Permanent geheugen/opslagmedia: Dit omvat opslagmedia zoals harde schijven, solid-state drives (SSD's), optische schijven en andere opslagapparaten die worden gebruikt voor langdurige opslag van gegevens.</p>
+        <p>Randapparatuur: Randapparatuur omvat externe apparaten zoals toetsenborden, muizen, printers, monitoren en andere hardwarecomponenten die communiceren met de computer.</p>
+        <p>Verbindingen: kabels/interfaces: Verbindingen verwijzen naar de fysieke kabels en interfaces die worden gebruikt om hardwarecomponenten aan te sluiten op de computer, zoals USB-, HDMI-, Ethernet- en andere kabels.</p>
 
           
 
