--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -22,19 +22,18 @@
     </ul>
 
     <h2>Toepassingslaag</h2>
-    <p>Toepassingsprogramma's zijn softwaretoepassingen die taken uitvoeren voor gebruikers, zoals webbrowsers en e-mailclients. Databases zijn georganiseerde 
-        verzamelingen van gestructureerde gegevens die worden gebruikt om informatie op te slaan en te beheren. Toepassingsprogramma's kunnen gegevens ophalen, bewerken en opslaan in 
-        databases om specifieke taken uit te voeren.</p>
+    <p>De toepassingenlaag in het 3-lagenmodel van een besturingssysteem (OS) vertegenwoordigt het hoogste niveau van de softwarehiërarchie in een computersysteem.</p>
+    <p>Toepassingsprogramma's: Dit zijn softwaretoepassingen die specifiek zijn ontwikkeld om taken uit te voeren en problemen op te lossen. Toepassingsprogramma's omvatten een breed scala aan software, zoals tekstverwerkers, spreadsheets, grafische ontwerpprogramma's, webbrowsers, games, en meer. Deze toepassingen worden door gebruikers gebruikt om specifieke taken uit te voeren.</p>
+    <p>Databases: Databases zijn gegevensopslagsystemen die zijn ontworpen om gegevens op een georganiseerde en gestructureerde manier op te slaan en op te halen. Ze worden vaak gebruikt voor het opslaan van informatie zoals klantgegevens, inventarissen, financiële gegevens en meer. Toepassingen kunnen gegevens uit databases halen en bijwerken om specifieke functies uit te voeren.</p>
 
-    <h2>Werking van de Toepassingslaag</h2>
-    <p>De toepassingslaag in het 3-lagenmodel verwijst naar het deel van een computernetwerk dat verantwoordelijk is voor de communicatie tussen verschillende programma's en apps op verschillende apparaten.</p>
-    <p>Hier zijn enkele belangrijke punten:</p>
-    <p>Doel: De toepassingslaag zorgt ervoor dat programma's op verschillende apparaten met elkaar kunnen praten. Denk aan het verzenden van e-mails, het surfen op internet, of het delen van bestanden.</p>         
-    <p>Voorbeelden: Dit omvat programma's die je dagelijks gebruikt, zoals webbrowsers, e-mailclients (zoals Outlook of Gmail), en apps voor bestandsoverdracht.</p>         
-    <p>Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht. </p>        
-    <p>Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen.</p>          
+    <h2>Functionaliteit van de Toepassingslaag</h2>
+    <p>Uitvoeren van specifieke taken: Toepassingen in deze laag zijn ontworpen om gebruikers te helpen bij het uitvoeren van specifieke taken, zoals tekstverwerking, gegevensanalyse, grafisch ontwerp, communicatie, en meer
+      Gegevensverwerking: Toepassingen in de toepassingenlaag kunnen gegevens uit verschillende bronnen verwerken, waaronder gebruikersinvoer, databases en externe gegevensbronnen.
+      Gebruikersinteractie: Deze toepassingen bieden gebruikersinterfaces waarmee gebruikers kunnen communiceren met de computer en gegevens kunnen invoeren en opvragen.
+      Opslag en beheer van gegevens: Toepassingen kunnen gegevens opslaan en beheren op permanente opslagmedia, zoals harde schijven en SSD's, en kunnen gegevens ophalen en bijwerken in databases.</p>
 
-     
+    <h2>Interactie met andere lagen</h2>
+    <p>De toepassingenlaag maakt gebruik van de diensten die worden aangeboden door de logische laag (het besturingssysteem) en werkt op de fysieke laag (hardware). Toepassingsprogramma's communiceren met het besturingssysteem om toegang te krijgen tot hardwarebronnen en systeembronnen. Ze kunnen ook communiceren met databases via query's en bewerkingen om gegevens op te halen, bij te werken of op te slaan. De toepassingenlaag maakt de functionaliteit van de hardware en het besturingssysteem toegankelijk en bruikbaar voor eindgebruikers en ontwikkelaars.</p>
 
   </body>
   </html> 
