--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -47,20 +47,16 @@
         <p>Toepassingen in de toepassingenlaag communiceren met het besturingssysteem door verzoeken in te dienen via de beschikbare API's en systeemoproepen. Deze verzoeken omvatten taken zoals het openen van bestanden, het uitvoeren van processen en het beheren van gegevens.
           Het besturingssysteem verwerkt deze verzoeken, beheert de toegang tot systeembronnen en beantwoordt de aanvragen van de toepassingen.</p>
 
-      <h2>Verdieping operating system</h2>
-      <p>Op de laag van de fysieke laag beheert het besturingssysteem de fysieke bronnen van de computer, zoals de processor, 
-      het geheugen en de opslagapparaten. Het zorgt ervoor dat deze bronnen efficiënt worden gebruikt en dat verschillende programma's 
-      geen conflicten veroorzaken bij het delen van deze bronnen.</p>
-      <p>Op de logische laag heeft het besturingssysteem de taak om de communicatie tussen verschillende programma's te coördineren.
-      Het beheert zaken als het plannen van processen, het beheren van bestanden en het regelen van netwerkverbindingen. 
-      Dit helpt programma's om met elkaar te praten en gegevens uit te wisselen.</p>
-      <p>Op de toepassingslaag bevindt het besturingssysteem zich niet rechtstreeks, maar het biedt een platform waarop programma's kunnen draaien.
-      Het zorgt ervoor dat programma's correct kunnen worden uitgevoerd, toegang hebben tot systeembronnen zoals de muis en het toetsenbord, en dat gegevens veilig worden bewaard.</p>      
-      <p>Kort gezegd is het besturingssysteem een soort dirigent die ervoor zorgt dat alles soepel verloopt in de wereld van computers en software. 
-      Het helpt programma's om goed te werken en ervoor te zorgen dat de computer efficiënt wordt gebruikt.</p>       
-      </article>   
-
-        <img src="3lagenmodel.PNG" style="width:550px;height:550px">
+      <h2>Verdieping bus</h2>
+      <p>De term "bus" binnen het 3-lagenmodel van een besturingssysteem verwijst naar een cruciaal element in de fysieke laag van een computersysteem. Een bus is een set elektrische geleiders op het moederbord die verschillende hardwarecomponenten met elkaar verbindt en zorgt voor gegevensoverdracht en communicatie tussen deze componenten.</p>
+      <p>Functie van bussen: Bussen fungeren als de communicatiewegen waarlangs gegevens en controle-informatie worden verzonden tussen hardwarecomponenten. Ze bieden de fysieke verbindingen waarmee de CPU, RAM, opslagapparaten, randapparatuur en andere componenten met elkaar kunnen communiceren.</p>
+      <p>Soorten bussen: Er zijn verschillende soorten bussen op een moederbord, waaronder de systeembus (system bus), geheugenbus (memory bus), en I/O-bus (input/output bus). Deze bussen hebben verschillende functies en verantwoordelijkheden. De systeembus verbindt bijvoorbeeld de CPU met RAM en andere geheugencomponenten, terwijl de I/O-bus communicatie mogelijk maakt met randapparatuur.</p>      
+      <p>Gegevensoverdracht: Bussen dragen gegevens, adresinformatie en controlecommando's. Ze fungeren als paden voor het verzenden van gegevens tussen componenten, zoals het overbrengen van instructies van de CPU naar RAM of het ophalen van gegevens van opslagapparaten.</p>       
+      <p>Bussnelheid en bandbreedte: Bussen hebben een bepaalde snelheid en bandbreedte, die aangeeft hoeveel gegevens per seconde kunnen worden overgedragen. Een hogere bussnelheid resulteert in een snellere gegevensoverdracht tussen componenten en verbetert de algehele systeemprestaties.</p>
+      <p>Busarbitrage: Aangezien meerdere componenten toegang willen tot de bus, kan busarbitrage nodig zijn om te bepalen welk apparaat prioriteit krijgt bij de toegang. Het besturingssysteem speelt een rol in het coördineren van deze toegang en het optimaliseren van de busprestaties.</p>
+      <p>Uitbreidingsbussen: Bovendien zijn er uitbreidingsbussen op het moederbord, zoals de PCI (Peripheral Component Interconnect) en PCIe (PCI Express) bussen, waarmee uitbreidingskaarten zoals grafische kaarten, geluidskaarten en netwerkkaarten kunnen worden aangesloten.</p>
+      <p>Bussen zijn van vitaal belang voor de werking van een computersysteem omdat ze de communicatie tussen hardwarecomponenten mogelijk maken. In het 3-lagenmodel van het besturingssysteem fungeren bussen als de fysieke verbinding tussen de fysieke laag en de logische laag. Het besturingssysteem in de logische laag coördineert en controleert toegang tot de bus en zorgt voor de optimale werking van het systeem. De efficiëntie en snelheid van bussen hebben invloed op de algehele prestaties van een computer.</p>
+    </article>   
 
   </body>
   </html>
