--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -58,6 +58,8 @@
       <p>Bussen zijn van vitaal belang voor de werking van een computersysteem omdat ze de communicatie tussen hardwarecomponenten mogelijk maken. In het 3-lagenmodel van het besturingssysteem fungeren bussen als de fysieke verbinding tussen de fysieke laag en de logische laag. Het besturingssysteem in de logische laag coördineert en controleert toegang tot de bus en zorgt voor de optimale werking van het systeem. De efficiëntie en snelheid van bussen hebben invloed op de algehele prestaties van een computer.</p>
     </article>   
 
+    <img src="Telefoon_OS_Model.PNG" style="width:550px;height:550px">
+    
   </body>
   </html>
           
