--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -47,7 +47,7 @@
         <p>Toepassingen in de toepassingenlaag communiceren met het besturingssysteem door verzoeken in te dienen via de beschikbare API's en systeemoproepen. Deze verzoeken omvatten taken zoals het openen van bestanden, het uitvoeren van processen en het beheren van gegevens.
           Het besturingssysteem verwerkt deze verzoeken, beheert de toegang tot systeembronnen en beantwoordt de aanvragen van de toepassingen.</p>
 
-          <img src="Telefoon_OS_Model.PNG" style="width:550px;height:550px">
+          <img src="Screenshot_20231020_144035_Gallery.jpg" style="width:550px;height:550px">
 
       <h2>Verdieping bus</h2>
       <p>De term "bus" binnen het 3-lagenmodel van een besturingssysteem verwijst naar een cruciaal element in de fysieke laag van een computersysteem. Een bus is een set elektrische geleiders op het moederbord die verschillende hardwarecomponenten met elkaar verbindt en zorgt voor gegevensoverdracht en communicatie tussen deze componenten.</p>
