--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -47,6 +47,7 @@
         <p>Toepassingen in de toepassingenlaag communiceren met het besturingssysteem door verzoeken in te dienen via de beschikbare API's en systeemoproepen. Deze verzoeken omvatten taken zoals het openen van bestanden, het uitvoeren van processen en het beheren van gegevens.
           Het besturingssysteem verwerkt deze verzoeken, beheert de toegang tot systeembronnen en beantwoordt de aanvragen van de toepassingen.</p>
 
+          <p>Hier staat de tekening van het 3-lagenmodel van een telefoon. Dit is een versimpelde tekening van de hierbovenstaande tekst.</p>
           <img src="Screenshot_20231020_144035_Gallery.jpg" style="width:550px;height:550px">
 
       <h2>Verdieping bus</h2>
